<resources>
    <string name="app_name">milkmantra</string>
    <string name="login">મોબાઇલ નંબર દાખલ કરો</string>
    <string name="font">Roboto</string>
    <string name="number">મોબાઈલ નંબર દાખલ કરો</string>
    <string name="enterotp">OTP મોકલો</string>
    <string name="message">
        તમારા ફોન પર મોકલેલ OTP દાખલ કરો
        </string>
    <string name="resendotp">Resend OTP</string>
    <string name="provider_asking">If you are Provider then call</string>
    <string name="customer_asking">If  you are customer then skip</string>
    <string name="dialog">Are You Really Customer?</string>
    <string name="ok">Yes,Confirm</string>
    <string name="no">No,Cancel</string>
    <string name="title_activity_create_new_account_customer">create_new_account_customer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- start customer Text-->
    <string name="Customer_Name">Enter Name</string>
    <string name="Customer_Phone">Enter Phone Number</string>
    <string name="Customer_Pincode">Enter Pincode</string>
    <string name="Customer_Address">Enter Address</string>
    <string name="Customer_Area">Enter The Area</string>
    <string name="Customer_Register">Register</string>
    <string name="conatact">Provide Mobile No</string>
    <string name="vacation_mode">Vacation Mode</string>
    <string name="save">SAVE</string>
    <string name="report">REPORT</string>
    <string name="Payment">PAYMENT</string>
    <string name="Logout">Logout</string>
    <string name="Update">Update</string>


    <!-- start provider text-->
    <string name="pc_unique_number">Enter The Number</string>
    <string name="account_Verification">Account Verification!</string>
    <string name="acc_ver_message">Your Account Verify Successfully,Please Press Continue </string>
    <string name="btn_continue">Continue</string>
    <string name="CNumber">Enter Customer Number</string>
    <string name="view">View</string>


    <!-- drop down-->
    <string name="select">Select Item</string>
    <string name="title_activity_provider_more_page">provider_more_page</string>
    <string-array name="mothes">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>Aprill</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>November</item>
        <item>Octomber</item>
        <item>December</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>