<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="179dp"
    android:orientation="vertical"
    android:background="@drawable/popup"
    android:layout_gravity="center">

    <TextView
        android:layout_width="337dp"
        android:layout_height="123dp"
        android:layout_gravity="center"
        android:text="@string/dialog"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancle"
            android:layout_width="116dp"
            android:layout_height="44dp"
            android:background="@drawable/popup_cancle_button"
            android:text="@string/no"
            android:textColor="@color/red"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/confirm"
            android:layout_width="116dp"
            android:layout_height="44dp"
            android:background="@drawable/button"
            android:text="@string/ok"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>