<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".provider.provider_verification_page"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/verified_icon"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_Verification"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_ver_message"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/Continue"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/btn_continue"
        android:textAlignment="center"
        android:textColor="@color/white" />


</LinearLayout>
